--- a/PoweredSource/PoweredSource.csproj
+++ b/PoweredSource/PoweredSource.csproj
@@ -66,9 +66,9 @@
       <Project>{7fa30be4-4736-4f8f-8b9c-d88f6b18fed1}</Project>
       <Name>Beautiful</Name>
     </ProjectReference>
-    <ProjectReference Include="..\CansaiUtils\ѤansaiUtils.csproj">
+    <ProjectReference Include="..\CansaiUtils\KansaiUtils.csproj">
       <Project>{121f81f8-b7e5-4b1a-ac94-88f77ddb353a}</Project>
-      <Name>ѤansaiUtils</Name>
+      <Name>KansaiUtils</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
