--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -71,17 +71,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Formwork.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Formwork.Designer.cs">
-      <DependentUpon>Formwork.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Asnic\FileCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Kets.cs" />
-    <Compile Include="Hex.cs" />
-    <Compile Include="Compiler.cs" />
-    <Compile Include="WordSegement.cs" />
+    <Compile Include="Asnic\Kets.cs" />
+    <Compile Include="Asnic\Hex.cs" />
+    <Compile Include="Asnic\Compiler.cs" />
+    <Compile Include="Asnic\Files.cs" />
+    <Compile Include="Asnic\Command.cs" />
+    <Compile Include="Asnic\WordSegement.cs" />
+    <Compile Include="AutoTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -106,13 +104,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Artlisense.py" />
     <Content Include="HTMLPage1.html" />
     <Content Include="TextFile1.txt" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
