--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Asnic\FileCommand.cs" />
+    <Compile Include="AutoDesk\Reflect.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Asnic\Kets.cs" />
     <Compile Include="Asnic\Hex.cs" />
