--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -73,10 +73,13 @@
   <ItemGroup>
     <Compile Include="Asnic\FileCommand.cs" />
     <Compile Include="AutoDesk\Reflect.cs" />
+    <Compile Include="Compiler.cs" />
+    <Compile Include="Constant.cs" />
+    <Compile Include="Kareer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Asnic\Kets.cs" />
     <Compile Include="Asnic\Hex.cs" />
-    <Compile Include="Asnic\Compiler.cs" />
+    <Compile Include="Asnic\Metric.cs" />
     <Compile Include="Asnic\Files.cs" />
     <Compile Include="Asnic\Command.cs" />
     <Compile Include="Asnic\WordSegement.cs" />
