--- a/UnitTest/AutoDesk.csproj
+++ b/UnitTest/AutoDesk.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{0CC61EF1-B334-431E-9312-697FF6A156D5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UnitTest</RootNamespace>
-    <AssemblyName>UnitTest</AssemblyName>
+    <RootNamespace>AutoDesk</RootNamespace>
+    <AssemblyName>AutoDesk</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -71,19 +71,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Asnic\FileCommand.cs" />
+    <Compile Include="Asnic\Binary.cs" />
+    <Compile Include="Asnic\Filter.cs" />
+    <Compile Include="Asnic\KetSelf.cs" />
+    <Compile Include="Asnic\Leon.cs" />
+    <Compile Include="Asnic\Nint.cs" />
+    <Compile Include="Asnic\Solid.cs" />
+    <Compile Include="Asnic\Symbol.cs" />
+    <Compile Include="AutoDesk\UnitTest1.cs" />
+    <Compile Include="AutoDesk\UnitTest2.cs" />
+    <Compile Include="Compiler\Preditor.cs" />
+    <Compile Include="IO\FileCommand.cs" />
     <Compile Include="AutoDesk\Reflect.cs" />
-    <Compile Include="Compiler.cs" />
+    <Compile Include="Compiler\Compiler.cs" />
     <Compile Include="Constant.cs" />
-    <Compile Include="Kareer.cs" />
+    <Compile Include="Asnic\KetStruct.cs" />
+    <Compile Include="Asnic\KetLine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Asnic\Kets.cs" />
+    <Compile Include="Asnic\Ket.cs" />
     <Compile Include="Asnic\Hex.cs" />
     <Compile Include="Asnic\Metric.cs" />
-    <Compile Include="Asnic\Files.cs" />
-    <Compile Include="Asnic\Command.cs" />
-    <Compile Include="Asnic\WordSegement.cs" />
-    <Compile Include="AutoTest.cs" />
+    <Compile Include="IO\Files.cs" />
+    <Compile Include="IO\Command.cs" />
+    <Compile Include="Extendable\Segement.cs" />
+    <Compile Include="AutoDesk\AutoTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -108,6 +119,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Extendable\Analytical.html" />
     <Content Include="HTMLPage1.html" />
     <Content Include="TextFile1.txt" />
   </ItemGroup>
