--- a/UnitTest/AutoDesk.csproj
+++ b/UnitTest/AutoDesk.csproj
@@ -98,6 +98,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="jquery\jquery-3.5.1.min.map" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -119,8 +120,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AutoDesk\AutoEditor.html" />
     <Content Include="Extendable\Analytical.html" />
     <Content Include="HTMLPage1.html" />
+    <Content Include="jquery\jquery-3.5.1.min.js" />
+    <Content Include="jquery\Json2.js" />
     <Content Include="TextFile1.txt" />
   </ItemGroup>
   <ItemGroup>
