--- a/UnitTest/AutoDesk.csproj
+++ b/UnitTest/AutoDesk.csproj
@@ -121,7 +121,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AutoDesk\AutoEditor.html" />
-    <Content Include="Extendable\Analytical.html" />
+    <Content Include="Extendable\CellyReserch\Analytical.html" />
+    <Content Include="Extendable\CellyReserch\JavaScript.html" />
+    <Content Include="Extendable\CellyReserch\Shapable.html" />
     <Content Include="HTMLPage1.html" />
     <Content Include="jquery\jquery-3.5.1.min.js" />
     <Content Include="jquery\Json2.js" />
