--- a/UnitTest/AutoDesk.csproj
+++ b/UnitTest/AutoDesk.csproj
@@ -121,9 +121,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AutoDesk\AutoEditor.html" />
-    <Content Include="Extendable\CellyReserch\Analytical.html" />
-    <Content Include="Extendable\CellyReserch\JavaScript.html" />
-    <Content Include="Extendable\CellyReserch\Shapable.html" />
+    <Content Include="Analytical\Analytical.html" />
+    <Content Include="Analytical\JavaScript.html" />
+    <Content Include="Analytical\Shapable.html" />
     <Content Include="HTMLPage1.html" />
     <Content Include="jquery\jquery-3.5.1.min.js" />
     <Content Include="jquery\Json2.js" />
@@ -132,7 +132,9 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Extendable\CellyReserch\" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
