--- a/UnitTest/AutoDesk.csproj
+++ b/UnitTest/AutoDesk.csproj
@@ -98,7 +98,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="jquery\jquery-3.5.1.min.map" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -120,20 +119,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Analytical\func.html" />
     <Content Include="AutoDesk\AutoEditor.html" />
-    <Content Include="Analytical\analytical.html" />
-    <Content Include="Analytical\javascript.html" />
-    <Content Include="Analytical\shapable.html" />
     <Content Include="HTMLPage1.html" />
-    <Content Include="jquery\jquery-3.5.1.min.js" />
-    <Content Include="jquery\Json2.js" />
     <Content Include="TextFile1.txt" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Analytical\" />
     <Folder Include="Extendable\CellyReserch\" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
