--- a/UnitTest/AutoDesk.csproj
+++ b/UnitTest/AutoDesk.csproj
@@ -81,6 +81,12 @@
     <Compile Include="AutoDesk\UnitTest1.cs" />
     <Compile Include="AutoDesk\UnitTest2.cs" />
     <Compile Include="Compiler\Preditor.cs" />
+    <Compile Include="Analytical\Formwork.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Analytical\Formwork.Designer.cs">
+      <DependentUpon>Formwork.cs</DependentUpon>
+    </Compile>
     <Compile Include="IO\FileCommand.cs" />
     <Compile Include="AutoDesk\Reflect.cs" />
     <Compile Include="Compiler\Compiler.cs" />
@@ -95,6 +101,7 @@
     <Compile Include="IO\Command.cs" />
     <Compile Include="Extendable\Segement.cs" />
     <Compile Include="AutoDesk\AutoTest.cs" />
+    <Compile Include="AutoDesk\Workform.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -119,6 +126,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Analytical\content\jquery-3.5.1.min.js" />
     <Content Include="AutoDesk\AutoEditor.html" />
     <Content Include="HTMLPage1.html" />
     <Content Include="TextFile1.txt" />
@@ -127,8 +135,12 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Analytical\" />
     <Folder Include="Extendable\CellyReserch\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Analytical\Formwork.resx">
+      <DependentUpon>Formwork.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
