--- a/AngelNetwork/AngelNetwork.csproj
+++ b/AngelNetwork/AngelNetwork.csproj
@@ -144,6 +144,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Code\Contexts.cs" />
+    <Content Include="analytical\Metric.js" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
