rect building rotate knee shudder 2-3 pillar

--- a/AngelNetwork/AngelNetwork.csproj
+++ b/AngelNetwork/AngelNetwork.csproj
@@ -73,12 +73,11 @@
     <Content Include="analytical\asnical.html" />
     <Content Include="analytical\copy.html" />
     <Content Include="analytical\file.html" />
-    <Content Include="analytical\FileSaver.js" />
-    <Content Include="analytical\FileSaver.min.js" />
     <Content Include="analytical\flex.css" />
     <Content Include="analytical\flex.html" />
     <Content Include="analytical\Func.html" />
     <Content Include="analytical\leon.html" />
+    <Content Include="analytical\leon\rt.html" />
     <Content Include="analytical\russia.html" />
     <Content Include="analytical\turk.html" />
     <Content Include="analytical\jquery.cookie.js" />
@@ -94,8 +93,6 @@
     <Content Include="analytical\basic.html" />
     <Content Include="analytical\screenable.html" />
     <Content Include="analytical\shapable.html" />
-    <Content Include="analytical\storager.js" />
-    <Content Include="analytical\storager.min.js" />
     <Content Include="analytical\TextFile1.txt" />
     <Content Include="bin\Beautiful.dll" />
     <Content Include="bin\Beautiful.pdb" />
@@ -153,7 +150,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Code\Contexts.cs" />
-    <Content Include="analytical\Metric.js" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -169,7 +165,6 @@
     <Content Include="handlers\get.ashx" />
     <Content Include="handlers\layout.ashx" />
     <Content Include="handlers\set.ashx" />
-    <Content Include="analytical\FileSaver.min.js.map" />
     <Content Include="analytical\localstring.map" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
