--- a/AngelNetwork/AngelNetwork.csproj
+++ b/AngelNetwork/AngelNetwork.csproj
@@ -67,32 +67,33 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="analytical\adverse.html" />
+    <Content Include="analytical\func\adverse.html" />
     <Content Include="analytical\analytical.html" />
-    <Content Include="analytical\Asnic.html" />
+    <Content Include="analytical\func\Asnic.html" />
     <Content Include="analytical\asnical.html" />
     <Content Include="analytical\copy.html" />
     <Content Include="analytical\file.html" />
-    <Content Include="analytical\flex.css" />
-    <Content Include="analytical\flex.html" />
-    <Content Include="analytical\permutation.html" />
+    <Content Include="analytical\interface\flex.css" />
+    <Content Include="analytical\interface\flex.html" />
+    <Content Include="analytical\Leonic\t.html" />
+    <Content Include="analytical\func\permutation.html" />
     <Content Include="analytical\Leonic\leon.html" />
     <Content Include="analytical\Leonic\rt.html" />
-    <Content Include="analytical\russia.html" />
-    <Content Include="analytical\turk.html" />
+    <Content Include="analytical\interface\russia.html" />
+    <Content Include="analytical\interface\turk.html" />
     <Content Include="analytical\jquery.cookie.js" />
-    <Content Include="analytical\kraft\kraft1.jpg" />
-    <Content Include="analytical\kraft\kraft2.jpg" />
-    <Content Include="analytical\kraft\kraft3.jpg" />
-    <Content Include="analytical\kraft\kraft4.jpg" />
-    <Content Include="analytical\kraft\kraft5.jpg" />
-    <Content Include="analytical\kraft\kraft6.jpg" />
-    <Content Include="analytical\kraft\kraft7.jpg" />
-    <Content Include="analytical\landscape.html" />
+    <Content Include="analytical\interface\kraft\kraft1.jpg" />
+    <Content Include="analytical\interface\kraft\kraft2.jpg" />
+    <Content Include="analytical\interface\kraft\kraft3.jpg" />
+    <Content Include="analytical\interface\kraft\kraft4.jpg" />
+    <Content Include="analytical\interface\kraft\kraft5.jpg" />
+    <Content Include="analytical\interface\kraft\kraft6.jpg" />
+    <Content Include="analytical\interface\kraft\kraft7.jpg" />
+    <Content Include="analytical\interface\landscape.html" />
     <Content Include="analytical\localstorage.html" />
     <Content Include="analytical\basic.html" />
     <Content Include="analytical\screenable.html" />
-    <Content Include="analytical\shapable.html" />
+    <Content Include="analytical\asnic\shapable.html" />
     <Content Include="analytical\TextFile1.txt" />
     <Content Include="bin\Beautiful.dll" />
     <Content Include="bin\Beautiful.pdb" />
