--- a/AngelNetwork/AngelNetwork.csproj
+++ b/AngelNetwork/AngelNetwork.csproj
@@ -77,6 +77,7 @@
     <Content Include="analytical\func\t-span.html" />
     <Content Include="analytical\interface\flex.css" />
     <Content Include="analytical\interface\flex.html" />
+    <Content Include="analytical\interface\kof.html" />
     <Content Include="analytical\Leonic\c.html" />
     <Content Include="analytical\Leonic\r.html" />
     <Content Include="analytical\Leonic\t.html" />
