--- a/AngelNetwork/AngelNetwork.csproj
+++ b/AngelNetwork/AngelNetwork.csproj
@@ -67,7 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="analytical\asnic\sabora.html" />
+    <Content Include="analytical\asnic\ketstart.html" />
     <Content Include="analytical\func\adverse.html" />
     <Content Include="analytical\analytical.html" />
     <Content Include="analytical\func\flex.html" />
