--- a/AngelNetwork/AngelNetwork.csproj
+++ b/AngelNetwork/AngelNetwork.csproj
@@ -79,6 +79,7 @@
     <Content Include="analytical\interface\flex.html" />
     <Content Include="analytical\interface\kof.html" />
     <Content Include="analytical\Leonic\c.html" />
+    <Content Include="analytical\Leonic\ctr.html" />
     <Content Include="analytical\Leonic\r.html" />
     <Content Include="analytical\Leonic\t.html" />
     <Content Include="analytical\func\permutation.html" />
