--- a/AngelNetwork/AngelNetwork.csproj
+++ b/AngelNetwork/AngelNetwork.csproj
@@ -100,7 +100,7 @@
     <Content Include="analytical\asnic\basic.html" />
     <Content Include="analytical\plate\hypertext.html" />
     <Content Include="analytical\screenable.html" />
-    <Content Include="analytical\asnic\leonic.html" />
+    <Content Include="analytical\asnic\leostart.html" />
     <Content Include="analytical\TextFile1.txt" />
     <Content Include="content\dist\css\bootstrap-theme.css" />
     <Content Include="content\dist\css\bootstrap-theme.min.css" />
