--- a/AutoDesk/AutoDesk.csproj
+++ b/AutoDesk/AutoDesk.csproj
@@ -48,7 +48,9 @@
     <Compile Include="Hypert.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rent.cs" />
+    <Compile Include="Raket.cs" />
+    <Compile Include="Rastal.cs" />
+    <Compile Include="RastalMenuItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
